[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/models/blocks.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://enviroment/Level.gd" type="Script" id=2]
[ext_resource path="res://enviroment/DeathZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://enviroment/VictoryZone.tscn" type="PackedScene" id=5]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.168627, 0.47451, 0.678431, 1 )
ambient_light_color = Color( 0.117647, 0.67451, 0.945098, 1 )
fog_enabled = true
fog_color = Color( 0.403922, 0.572549, 0.741176, 1 )
tonemap_mode = 3
adjustment_enabled = true
adjustment_brightness = 0.75
adjustment_contrast = 1.5
adjustment_saturation = 1.2

[node name="Level02" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0834, -25.6332, -38.7587 )
script = ExtResource( 2 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 1 )
cell_center_x = false
cell_center_y = false
cell_center_z = false
data = {
"cells": PoolIntArray( 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1048583, 2, 4, 1048585, 2, 4, 917511, 4, 4, 917512, 4, 4, 917513, 4, 4, 917511, 6, 1048576, 917512, 6, 1048576, 917513, 6, 536870912, 917511, 7, 1048576, 917511, 8, 1048576, 917513, 8, 1048576, 917513, 9, 1048576, 917511, 10, 1048576, 917511, 11, 1048576, 917513, 11, 1048576, 917507, 13, 1048578, 917509, 13, 1048577, 917511, 13, 1048576, 917513, 13, 537919488, 917515, 14, 537919489, 917517, 14, 2, 917507, 15, 655361, 917509, 15, 655360, 917510, 15, 655360, 917511, 15, 1074397184, 917512, 15, 655360, 917513, 15, 655360, 917514, 15, 655360, 917515, 15, 655360, 917516, 15, 655360, 917517, 15, 655360, 917509, 16, 655360, 917510, 16, 655360, 917511, 16, 655360, 917512, 16, 1074397184, 917513, 16, 655360, 917514, 16, 1074397184, 917515, 16, 1074397184, 917517, 16, 1, 917507, 17, 1074397185, 917509, 17, 1074397184, 917510, 17, 655360, 917513, 17, 1074397184, 917515, 17, 655360, 917507, 18, 655361, 917511, 18, 655360, 917513, 18, 1074397184, 917515, 18, 655360, 917517, 18, 1073741825, 917509, 19, 1074397184, 917510, 19, 655360, 917511, 19, 655360, 917513, 19, 537526272, 917515, 19, 655360, 917507, 20, 655361, 917509, 20, 655360, 917510, 20, 655360, 917511, 20, 655360, 917513, 20, 655360, 917515, 20, 655360, 917517, 20, 1, 917509, 21, 655360, 917510, 21, 655360, 917513, 21, 655360, 917515, 21, 655360, 917507, 22, 655361, 917509, 22, 537526272, 917510, 22, 1074397184, 917511, 22, 655360, 917512, 22, 655360, 917513, 22, 655360, 917514, 22, 537526272, 917515, 22, 655360, 917517, 22, 1, 917509, 23, 1074397184, 917510, 23, 537526272, 917511, 23, 537526272, 917512, 23, 1074397184, 917513, 23, 655360, 917514, 23, 1074397184, 917515, 23, 655360, 917517, 23, 536870913, 917507, 24, 655361, 917509, 24, 655360, 917510, 24, 537526272, 917511, 24, -1073086464, 917512, 24, 537526272, 917514, 24, -1073086464, 917515, 24, 655360, 917517, 24, 536870913, 917515, 25, 655360, 917517, 25, 1, 917507, 26, 655361, 917509, 26, 655360, 917510, 26, 655360, 917511, 26, 655360, 917512, 26, 537526272, 917513, 26, 655360, 917514, 26, 655360, 917515, 26, 655360, 917517, 26, 1, 917507, 28, 655362, 917509, 28, 1441793, 917511, 28, 1441793, 917512, 28, 1441793, 917513, 28, 1441793, 917515, 28, 1441793, 917517, 28, 538312706, 1572865, 65494, 0, 1572866, 65494, 0, 1572867, 65494, 0, 1572868, 65494, 0, 1572869, 65494, 0, 1572870, 65494, 0, 1572871, 65494, 0, 1572872, 65494, 0, 1572873, 65494, 0, 1572874, 65494, 0, 1572875, 65494, 0, 1572876, 65494, 0, 1572877, 65494, 0, 1572878, 65494, 0, 1572879, 65494, 0, 1572865, 65495, 0, 1572866, 65495, 0, 1572867, 65495, 0, 1572865, 65496, -1073741824, 1572866, 65496, 0, 1572867, 65496, 0, 1572868, 65496, 0, 1572869, 65496, 0, 1572870, 65496, 0, 1572871, 65496, 0, 1572872, 65496, 0, 1572873, 65496, 0, 1572874, 65496, 0, 1572875, 65496, 0, 1572876, 65496, 0, 1572877, 65496, 0, 1572878, 65496, 0, 1572879, 65496, 0, 1572865, 65497, 0, 1572866, 65497, 0, 1572867, 65497, 0, 1572868, 65497, 0, 1572869, 65497, 0, 1572870, 65497, 0, 1572871, 65497, 0, 1572872, 65497, 0, 1572873, 65497, 0, 1572876, 65497, 0, 1572879, 65497, 0, 1572866, 65498, 0, 1572867, 65498, 0, 1572868, 65498, 0, 1572869, 65498, 0, 1572870, 65498, 536870912, 1572871, 65498, 1073741824, 1572872, 65498, 0, 1572873, 65498, 0, 1572874, 65498, 0, 1572875, 65498, 0, 1572876, 65498, -1073741824, 1572877, 65498, 1073741824, 1572878, 65498, 536870912, 1572879, 65498, 536870912, 1572865, 65499, 536870912, 1572867, 65499, 536870912, 1572870, 65499, -1073741824, 1572875, 65499, 0, 1572876, 65499, 0, 1572877, 65499, 0, 1572878, 65499, 0, 1572879, 65499, -1073741824, 1572865, 65500, 536870912, 1572866, 65500, 0, 1572867, 65500, -1073741824, 1572868, 65500, 536870912, 1572869, 65500, 536870912, 1572870, 65500, 0, 1572871, 65500, 0, 1572873, 65500, 5, 1572875, 65500, 0, 1572877, 65500, 0, 1572879, 65500, 0, 1572865, 65501, 0, 1572869, 65501, 536870912, 1572870, 65501, 536870912, 1572871, 65501, 0, 1572875, 65501, 536870912, 1572876, 65501, 536870912, 1572877, 65501, 0, 1572878, 65501, 0, 1572865, 65502, 0, 1572866, 65502, 0, 1572867, 65502, 536870912, 1572868, 65502, 536870912, 1572869, 65502, 0, 1572870, 65502, 0, 1572871, 65502, 0, 1572872, 65502, 0, 1572873, 65502, 1073741824, 1572874, 65502, 1073741824, 1572875, 65502, 0, 1572876, 65502, -1610612736, 1572877, 65502, 0, 1572878, 65502, -1610612736, 1572879, 65502, 536870912, 1572865, 65503, 0, 1572866, 65503, -1610612736, 1572867, 65503, 0, 1572868, 65503, 536870912, 1572869, 65503, 0, 1572872, 65503, 0, 1572876, 65503, -1610612736, 1572877, 65503, -1073741824, 1572878, 65503, 536870912, 1572879, 65503, 0, 1572865, 65504, -1610612736, 1572868, 65504, 536870912, 1572869, 65504, 0, 1572870, 65504, 0, 1572873, 65504, 536870912, 1572874, 65504, 536870912, 1572876, 65504, 536870912, 1572877, 65504, 0, 1572878, 65504, 0, 1572879, 65504, -536870912, 1572865, 65505, 0, 1572867, 65505, 0, 1572868, 65505, -1610612736, 1572871, 65505, -1610612736, 1572872, 65505, 0, 1572873, 65505, 0, 1572874, 65505, -1610612736, 1572875, 65505, 536870912, 1572876, 65505, 1073741824, 1572877, 65505, -1610612736, 1572878, 65505, 536870912, 1572879, 65505, 536870912, 1572866, 65506, 0, 1572867, 65506, 0, 1572868, 65506, 0, 1572869, 65506, 0, 1572870, 65506, 0, 1572871, 65506, 536870912, 1572872, 65506, 0, 1572876, 65506, -1073741824, 1572879, 65506, 0, 1572865, 65507, 0, 1572866, 65507, 536870912, 1572870, 65507, 0, 1572871, 65507, 0, 1572872, 65507, 0, 1572873, 65507, 536870912, 1572874, 65507, 536870912, 1572875, 65507, 0, 1572876, 65507, -1610612736, 1572877, 65507, 0, 1572878, 65507, 0, 1572879, 65507, 0, 1572865, 65508, 0, 1572866, 65508, 0, 1572868, 65508, 0, 1572869, 65508, 0, 1572870, 65508, 0, 1572871, 65508, 536870912, 1572872, 65508, 0, 1572873, 65508, 0, 1572874, 65508, 0, 1572875, 65508, 0, 1572876, 65508, 0, 1572877, 65508, 0, 1572878, 65508, 0, 1572879, 65508, 0, 1441798, 65513, 4, 1441799, 65513, 4, 1441800, 65513, 4, 1441801, 65513, 536870916, 1441798, 65515, 536870912, 1441799, 65515, 0, 1441800, 65515, 0, 1441801, 65515, 0, 1441798, 65516, 0, 1441800, 65516, 0, 1441801, 65516, 0, 1441798, 65517, 536870912, 1441800, 65517, 0, 1441801, 65517, 0, 1179655, 65523, 4, 1179656, 65523, 4, 1179657, 65523, 4, 1179655, 65525, 0, 1179656, 65525, 0, 1179657, 65525, 0, 1179655, 65526, 0, 1179656, 65526, 0, 1179657, 65526, 0, 1179655, 65527, 536870912, 1179656, 65527, 0, 1179657, 65527, 0, 1179655, 65528, 536870912, 1179656, 65528, 0, 1179657, 65528, 0, 1179655, 65529, 536870912, 1179656, 65529, 0, 1179657, 65529, 0, 1179655, 65530, 536870912, 1179656, 65530, 0, 1179657, 65530, 0, 1179655, 65531, 536870912, 1179656, 65531, 0, 1179657, 65531, 0, 1179655, 65532, 536870912, 1179656, 65532, 0, 1179657, 65532, 0, 1179655, 65533, 536870912, 1179656, 65533, 0, 1179657, 65533, 0, 1179655, 65534, 536870912, 1179656, 65534, 0, 1179657, 65534, 0, 1179655, 65535, 536870912, 1179657, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 24, 0 )
}

[node name="Ball" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.9581, 29.0453, 45.6884 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.5, -0.75, 0.433013, 0, 0.5, 0.866025, -0.866025, -0.433013, 0.25, 0, 0, 0 )
light_color = Color( 0.972549, 0.901961, 0.803922, 1 )
light_energy = 2.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="DeathZone" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.2827, 0 )

[node name="VictoryZone" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17.5444, 46.3485, -72.4305 )

[connection signal="body_entered" from="DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="VictoryZone" to="." method="_on_VictoryZone_body_entered"]
